a veil to fix scrolling but on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -422,17 +422,17 @@ body {
           .screen.video .theater .date a:hover {
             color: white;
             text-decoration: underline; }
-      .screen.video .theater #ytplayer {
+      .screen.video .theater #ytplayer, .screen.video .theater #veil {
         width: 100%;
         margin: 0 auto;
         display: inline-block;
         position: absolute;
         top: 5em;
-        -webkit-transition: all 0.2s ease;
-        -moz-transition: all 0.2s ease;
-        transition: all 0.2s ease;
         z-index: 1;
         margin-left: -2em; }
+      .screen.video .theater #veil {
+        z-index: 2;
+        display: none; }
       .screen.video .theater .sidebar {
         position: absolute;
         width: 16.6em;
@@ -1076,7 +1076,7 @@ body {
       font-family: "FF Meta W01", Helvetica, Arial, sans-serif;
       font-size: 2em;
       text-transform: uppercase;
-      margin-top: 3.3em;
+      margin-top: 0.5em;
       margin-bottom: 0.83em; }
     .screen.mapa a.mapa img {
       width: 100%;
@@ -2237,6 +2237,12 @@ body {
   margin-bottom: 2em; }
 .shortWide .screen.acercade .yo-kuma img.todos {
   display: none; }
+.shortWide .screen.mapa .copy {
+  top: 0;
+  padding-top: 1em;
+  right: -35em; }
+  .shortWide .screen.mapa .copy h3 {
+    margin-bottom: 0; }
 .shortWide.mobileNotIpad {
   /*.screen {height:auto; overflow:visible}*/
   /*#goodbye {position:fixed}*/ }
@@ -2318,6 +2324,10 @@ body.mobileNotIpad #fullpage.propuestas .text span.confetti {
     margin-bottom: 2em; }
 
 /*--------------------;PORTRAIT--------------------*/
+.portrait #menu {
+  font-size: 3em; }
+.portrait #goodbye {
+  font-size: 1.3em; }
 .portrait .screen.video {
   background: black; }
   .portrait .screen.video .theater {
@@ -2422,6 +2432,8 @@ body.mobileNotIpad #fullpage.propuestas .text span.confetti {
   .portrait .screen.acercade .yo-kuma .copy p {
     margin-left: 3em;
     margin-bottom: 2.5em; }
+.portrait .screen.mapa .copy {
+  font-size: 1.5em; }
 .portrait #fullpage.compromisos .screen.toc .header {
   margin-bottom: 8em; }
 .portrait #fullpage.compromisos .screen.toc p {
